# accountant

./: .gitignore  AccountsModel.cpp  CMakeLists.txt  CMakePresets.json  MainWindow.cpp  MainWindow.hpp  README.md  main.cpp  mainwindow.ui  ofx_demo.cpp  sql_helpers.cpp  sql_helpers.hpp
example_dbs/: simple.sql
examples/: simple.sql
models/: AccountModel.cpp  AccountModel.hpp  AccountTreeModel.cpp  AccountTreeModel.hpp  AccountsModel.hpp  Roles.hpp  SQLColumns.hpp
schemas/: 1-schema.sql
scripts/: run-with-asan.sh
src/: CMakeLists.txt  main.cpp  ofx_demo.cpp
src/delegates/: AccountTreeDelegate.cpp  AccountTreeDelegate.hpp  EditDelegate.cpp  EditDelegate.hpp
src/models/: Account.cpp  Account.hpp  AccountModel.hpp  AccountTransactions.cpp  AccountTransactions.hpp  AccountTree.cpp  AccountTree.hpp  AccountTreeModel.cpp  DatabaseManager.cpp  DatabaseManager.hpp  Roles.hpp  SQLColumns.hpp
src/util/: sql_helpers.cpp  sql_helpers.hpp
src/views/: AboutDialog.cpp  AboutDialog.hpp  AboutDialog.ui  AccountsView.cpp  AccountsView.hpp  AccountsView.ui  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  NewAccountDialog.cpp  NewAccountDialog.hpp  NewAccountDialog.ui  SecurityEditor.cpp  SecurityEditor.hpp  SecurityEditor.ui  TransactionsView.cpp  TransactionsView.hpp  TransactionsView.ui  accountsview.ui  mainwindow.ui  transactionsview.ui
tests/: AccountTreeTests.cpp  CMakeLists.txt  model_tests.cpp
tools/: generate_about_text.cpp  leak-suppressions.txt  run-with-asan.sh  spdx_parser.cpp  spdx_parser.hpp
views/: MainWindow.cpp  MainWindow.hpp  TransactionsView.cpp  TransactionsView.hpp  mainwindow.ui  transactionsview.ui
